--- a/BlockchainAssignment/BlockchainAssignment.csproj
+++ b/BlockchainAssignment/BlockchainAssignment.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Block.cs" />
+    <Compile Include="Blockchain.cs" />
     <Compile Include="BlockchainApp.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +57,7 @@
     <Compile Include="HashCode\HashTools.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="Wallet\Wallet.cs" />
     <EmbeddedResource Include="BlockchainApp.resx">
       <DependentUpon>BlockchainApp.cs</DependentUpon>
